compile_fail_tests/destructure/tuple_arity_unimplemented.rs
use const_tools::destructure;

fn main() {
    destructure!(let (t0, t1, t2, t3, t4, t5, t6, t7, t8, t9, t10, t11, t12) = (0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12));
}
